{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 160,
  "lineage": "a143aa50-832c-517b-9de8-d4b3abf2a77d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5f3a0715e83ce72",
            "arn": "arn:aws:ec2:us-east-1:442027455330:elastic-ip/eipalloc-0d5f3a0715e83ce72",
            "association_id": "eipassoc-0502ebe72baeed1b2",
            "domain": "vpc",
            "id": "eipalloc-0d5f3a0715e83ce72",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0eebfd16fea990752",
            "private_dns": "ip-10-0-1-160.ec2.internal",
            "private_ip": "10.0.1.160",
            "public_dns": "ec2-3-215-170-235.compute-1.amazonaws.com",
            "public_ip": "3.215.170.235",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "eipalloc-0d5f3a0715e83ce72",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d05471b100e9083f",
            "arn": "arn:aws:ec2:us-east-1:442027455330:instance/i-04bd6ba42a033f824",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04bd6ba42a033f824",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "homelab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0dc4e1c938699f4c1"
              }
            ],
            "primary_network_interface_id": "eni-0dc4e1c938699f4c1",
            "private_dns": "ip-10-0-1-142.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.142",
            "public_dns": "ec2-13-220-247-247.compute-1.amazonaws.com",
            "public_ip": "13.220.247.247",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e1a95fea85897285",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e4350b5acf856de",
            "tags": {
              "Name": "homelab-bastion"
            },
            "tags_all": {
              "Name": "homelab-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06724b638e766aaba"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "i-04bd6ba42a033f824",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.monitoring",
            "aws_subnet.public",
            "aws_vpc.homelab",
            "data.aws_ami.amazon_linux",
            "data.aws_key_pair.homelab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d05471b100e9083f",
            "arn": "arn:aws:ec2:us-east-1:442027455330:instance/i-0435ca47480335f8a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0435ca47480335f8a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "homelab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e305122868eb9af3"
              }
            ],
            "primary_network_interface_id": "eni-0e305122868eb9af3",
            "private_dns": "ip-10-0-1-254.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.254",
            "public_dns": "ec2-3-238-190-121.compute-1.amazonaws.com",
            "public_ip": "3.238.190.121",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e17f5037176f4130",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e4350b5acf856de",
            "tags": {
              "Name": "homelab-monitoring"
            },
            "tags_all": {
              "Name": "homelab-monitoring"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca1ca52ac422045a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "i-0435ca47480335f8a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.bastion",
            "aws_security_group.monitoring",
            "aws_subnet.public",
            "aws_vpc.homelab",
            "data.aws_ami.amazon_linux",
            "data.aws_key_pair.homelab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-049bbb35740b49f99",
            "arn": "arn:aws:ec2:us-east-1:442027455330:instance/i-0b659e7da6603a74f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "homelab-cloudwatch-profile",
            "id": "i-0b659e7da6603a74f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "homelab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-069f3fc9ef2667165"
              }
            ],
            "primary_network_interface_id": "eni-069f3fc9ef2667165",
            "private_dns": "ip-10-0-2-145.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.145",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-050a5d26a4233b1e8",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a23d061fd0eaaf1",
            "tags": {
              "Name": "homelab-windows"
            },
            "tags_all": {
              "Name": "homelab-windows"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f0d5120c57733410"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "i-0b659e7da6603a74f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.cloudwatch",
            "aws_iam_role.cloudwatch",
            "aws_security_group.bastion",
            "aws_security_group.monitoring",
            "aws_security_group.windows",
            "aws_subnet.private",
            "aws_vpc.homelab",
            "data.aws_ami.windows",
            "data.aws_key_pair.homelab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "homelab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442027455330:internet-gateway/igw-0e653c953f196a966",
            "id": "igw-0e653c953f196a966",
            "owner_id": "442027455330",
            "region": "us-east-1",
            "tags": {
              "Name": "homelab-igw"
            },
            "tags_all": {
              "Name": "homelab-igw"
            },
            "vpc_id": "vpc-08c6f4d8d13cfc626"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "igw-0e653c953f196a966",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.homelab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "homelab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5f3a0715e83ce72",
            "association_id": "eipassoc-0502ebe72baeed1b2",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0ec164e94edd76012",
            "network_interface_id": "eni-0eebfd16fea990752",
            "private_ip": "10.0.1.160",
            "public_ip": "3.215.170.235",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e4350b5acf856de",
            "tags": {
              "Name": "homelab-nat"
            },
            "tags_all": {
              "Name": "homelab-nat"
            },
            "vpc_id": "vpc-08c6f4d8d13cfc626"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "nat-0ec164e94edd76012",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.homelab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442027455330:route-table/rtb-0fd26efcd95bb9197",
            "id": "rtb-0fd26efcd95bb9197",
            "owner_id": "442027455330",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ec164e94edd76012",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "homelab-private-rt"
            },
            "tags_all": {
              "Name": "homelab-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c6f4d8d13cfc626"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "rtb-0fd26efcd95bb9197",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.homelab",
            "aws_subnet.public",
            "aws_vpc.homelab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442027455330:route-table/rtb-0bc642af4a0e2ded5",
            "id": "rtb-0bc642af4a0e2ded5",
            "owner_id": "442027455330",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e653c953f196a966",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "homelab-public-rt"
            },
            "tags_all": {
              "Name": "homelab-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c6f4d8d13cfc626"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "rtb-0bc642af4a0e2ded5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.homelab",
            "aws_vpc.homelab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe2a887cb9dde0b9",
            "region": "us-east-1",
            "route_table_id": "rtb-0fd26efcd95bb9197",
            "subnet_id": "subnet-06a23d061fd0eaaf1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "rtbassoc-0fe2a887cb9dde0b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.homelab",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.homelab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ba1cfd3d7afa145",
            "region": "us-east-1",
            "route_table_id": "rtb-0bc642af4a0e2ded5",
            "subnet_id": "subnet-04e4350b5acf856de"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "rtbassoc-02ba1cfd3d7afa145",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.homelab",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.homelab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442027455330:security-group/sg-06724b638e766aaba",
            "description": "Bastion host - SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06724b638e766aaba",
            "ingress": [
              {
                "cidr_blocks": [
                  "96.8.141.189/32",
                  "52.94.76.0/22",
                  "18.206.107.24/29"
                ],
                "description": "SSH from home IP, CloudShell, and EC2 Instance Connect",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Node Exporter scraping from monitoring instance",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca1ca52ac422045a"
                ],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "homelab-bastion-sg",
            "name_prefix": "",
            "owner_id": "442027455330",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "homelab-bastion-sg"
            },
            "tags_all": {
              "Name": "homelab-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c6f4d8d13cfc626"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "sg-06724b638e766aaba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.monitoring",
            "aws_vpc.homelab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442027455330:security-group/sg-0ca1ca52ac422045a",
            "description": "Prometheus and Grafana monitoring server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca1ca52ac422045a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Node Exporter metrics within VPC",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "96.8.141.189/32",
                  "52.94.76.0/22",
                  "18.206.107.24/29"
                ],
                "description": "SSH from home IP, CloudShell, and EC2 Instance Connect",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "96.8.141.189/32"
                ],
                "description": "Grafana dashboard access",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "96.8.141.189/32"
                ],
                "description": "Prometheus UI access",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "homelab-monitoring-sg",
            "name_prefix": "",
            "owner_id": "442027455330",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "homelab-monitoring-sg"
            },
            "tags_all": {
              "Name": "homelab-monitoring-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c6f4d8d13cfc626"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "sg-0ca1ca52ac422045a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.homelab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442027455330:security-group/sg-0f0d5120c57733410",
            "description": "Windows Server - RDP from bastion only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0d5120c57733410",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "RDP from bastion only",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06724b638e766aaba"
                ],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "homelab-windows-sg",
            "name_prefix": "",
            "owner_id": "442027455330",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "homelab-windows-sg"
            },
            "tags_all": {
              "Name": "homelab-windows-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c6f4d8d13cfc626"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "sg-0f0d5120c57733410",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.monitoring",
            "aws_vpc.homelab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442027455330:subnet/subnet-06a23d061fd0eaaf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a23d061fd0eaaf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "442027455330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "homelab-private"
            },
            "tags_all": {
              "Name": "homelab-private"
            },
            "vpc_id": "vpc-08c6f4d8d13cfc626"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "subnet-06a23d061fd0eaaf1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.homelab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442027455330:subnet/subnet-04e4350b5acf856de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e4350b5acf856de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "442027455330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "homelab-public"
            },
            "tags_all": {
              "Name": "homelab-public"
            },
            "vpc_id": "vpc-08c6f4d8d13cfc626"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "subnet-04e4350b5acf856de",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.homelab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "homelab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:442027455330:vpc/vpc-08c6f4d8d13cfc626",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b70aee35aa7fee6d",
            "default_route_table_id": "rtb-04e1d2f668bab6c03",
            "default_security_group_id": "sg-08b73d12546471b17",
            "dhcp_options_id": "dopt-033c8ed812a664792",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c6f4d8d13cfc626",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e1d2f668bab6c03",
            "owner_id": "442027455330",
            "region": "us-east-1",
            "tags": {
              "Name": "homelab-vpc"
            },
            "tags_all": {
              "Name": "homelab-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "442027455330",
            "id": "vpc-08c6f4d8d13cfc626",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}